static/psi4manual/4.0b2/_sources/autodoc_dft_gga.txt

.. table:: GGA functionals available in |PSIfour|

   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 Name |                                                                      Description |       GGA? |      Meta? |     X_LRC? |  X_Hybrid? |     C_LRC? |  C_Hybrid? |          Dispersion? |                                       Dispersion Description |
   +======================+==================================================================================+============+============+============+============+============+============+======================+==============================================================+
   |                B3LYP |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              B3LYP-D |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               B3LYP5 |                                B3LYP5 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |             B3LYP5-D |                                B3LYP5 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 B3_X |                                           Becke88 GGA Exchange (B3LYP weighting) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                B88_X |                                                             Becke88 GGA Exchange |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                B97-0 |                                 B97-0 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.194300  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                B97-1 |                                 B97-1 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.210000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                B97-2 |                                 B97-2 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.210000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                B97-D |                                   B97-D Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 BLYP |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               BLYP-D |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 BP86 |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 FT97 |                                         FT97 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              FT97B_X |                                                  Filitov and Theil 1997 Exchange |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               FT97_C |                                         FT97 Correlation (Involves Ei functions) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 HCTH |                                    HCTH Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              HCTH120 |                                 HCTH120 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              HCTH147 |                                 HCTH147 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              HCTH407 |                                 HCTH407 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                LYP_C |                                                                  LYP Correlation |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                  M05 |                              Heavily Parameterized Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               M05-2X |                              Heavily Parameterized Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.560000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                P86_C |                                            P86 Correlation (PZ81 LSDA + P86 GGA) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                  PBE |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                PBE-D |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 PBE0 |                                  PBE0 Hybrid GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.250000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |             PBESOL_X |                                        PBEsol GGA Exchange Hole (Parameter Free) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                PBE_C |                                                                  PBE Correlation |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                PBE_X |                                           PBE GGA Exchange Hole (Parameter Free) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 PW91 |                                         PW91 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               PW91_C |                                                                 PW91 Correlation |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               PW91_X |                                                  PW91 Parameterized GGA Exchange |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               wB88_X |                                         B88 Short-Range GGA Exchange (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 wB97 |                                          Parameterized LRC B97 GGA XC Functional |     Y      |    ---     |  0.400000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                wB97X |                                   Parameterized Hybrid LRC B97 GGA XC Functional |     Y      |    ---     |  0.400000  |  0.157706  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              wB97X-D |                   Parameterized Hybrid LRC B97 GGA XC Functional with Dispersion |     Y      |    ---     |  0.200000  |  0.222036  |    ---     |    ---     |                 -CHG |                   Chai and Head-Gordon Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                wBLYP |                                                BLYP SR-XC Functional (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                 wPBE |                                                 PBE SR-XC Functional (HJS Model) |     Y      |    ---     |  0.400000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |                wPBE0 |                                                PBE0 SR-XC Functional (HJS Model) |     Y      |    ---     |  0.300000  |  0.250000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |               wPBE_X |                                         PBE Short-Range GGA Exchange (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |              wPBEsol |                                              PBEsol SR-XC Functional (HJS Model) |     Y      |    ---     |  0.400000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |             wPBEsol0 |                                             PBEsol0 SR-XC Functional (HJS Model) |     Y      |    ---     |  0.300000  |  0.250000  |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+
   |            wPBEsol_X |                                      PBEsol Short-Range GGA Exchange (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+--------------------------------------------------------------+

