static/psi4manual/4.0b4/_sources/autodoc_dft_gga.txt

.. table:: GGA functionals available in |PSIfour|

   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 Name |                                                                      Description |       GGA? |      Meta? |     X_LRC? |  X_Hybrid? |     C_LRC? |  C_Hybrid? |         C_SCS? SS/OS |          Dispersion? |                                       Dispersion Description |
   +======================+==================================================================================+============+============+============+============+============+============+======================+======================+==============================================================+
   |               B2PLYP |                             B2PLYP Double Hybrid Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.530000  |    ---     |  0.270000  |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             B2PLYP-D |                             B2PLYP Double Hybrid Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.530000  |    ---     |  0.270000  |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            B2PLYP-D3 |                             B2PLYP Double Hybrid Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.530000  |    ---     |  0.270000  |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |          B2PLYP-D3BJ |                             B2PLYP Double Hybrid Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.530000  |    ---     |  0.270000  |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                B3LYP |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            B3LYP-CHG |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |                 -CHG |                   Chai and Head-Gordon Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              B3LYP-D |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             B3LYP-D1 |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |                  -D1 |                           Grimme's -D1 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             B3LYP-D3 |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |           B3LYP-D3BJ |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 B3_X |                                           Becke88 GGA Exchange (B3LYP weighting) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                B88_X |                                                             Becke88 GGA Exchange |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                B97-0 |                                 B97-0 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.194300  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                B97-1 |                                 B97-1 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.210000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                B97-2 |                                 B97-2 Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.210000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                B97-D |                                   B97-D Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               B97-D3 |                                   B97-D Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             B97-D3BJ |                                   B97-D Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 BLYP |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               BLYP-D |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              BLYP-D1 |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |                  -D1 |                           Grimme's -D1 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              BLYP-D3 |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            BLYP-D3BJ |                                         BLYP GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 BP86 |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               BP86-D |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              BP86-D1 |                                 B3LYP Hybrid-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.200000  |    ---     |    ---     |    ---               |                  -D1 |                           Grimme's -D1 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              BP86-D3 |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            BP86-D3BJ |                                         BP86 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             DSD-BLYP |                    DSD-BLYP Dispersion-corrected SCS Double Hybrid XC Functional |     Y      |    ---     |    ---     |  0.710000  |    ---     |  1.000000  |  0.430000 / 0.460000 |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |           DSD-PBEP86 |   DSD-PBEP86 Dispersion-corrected SCS Double Hybrid XC Functional (opt. for -D2) |     Y      |    ---     |    ---     |  0.680000  |    ---     |  1.000000  |  0.230000 / 0.510000 |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |           DSD-PBEPBE |                  DSD-PBEPBE Dispersion-corrected SCS Double Hybrid XC Functional |     Y      |    ---     |    ---     |  0.660000  |    ---     |  1.000000  |  0.120000 / 0.530000 |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 FT97 |                                         FT97 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              FT97B_X |                                                  Filitov and Theil 1997 Exchange |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               FT97_C |                                         FT97 Correlation (Involves Ei functions) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 HCTH |                                    HCTH Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              HCTH120 |                                 HCTH120 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |           HCTH120-D3 |                                 HCTH120 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |         HCTH120-D3BJ |                                 HCTH120 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              HCTH147 |                                 HCTH147 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              HCTH407 |                                 HCTH407 Pure-GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                LYP_C |                                                                  LYP Correlation |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                  M05 |                              Heavily Parameterized Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               M05-2X |                              Heavily Parameterized Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.560000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            M05-2X-D3 |                              Heavily Parameterized Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.560000  |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               M05-D3 |                              Heavily Parameterized Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.280000  |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                P86_C |                                            P86 Correlation (PZ81 LSDA + P86 GGA) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                  PBE |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                PBE-D |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               PBE-D1 |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                  -D1 |                           Grimme's -D1 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               PBE-D3 |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             PBE-D3BJ |                                          PBE GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 PBE0 |                                  PBE0 Hybrid GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               PBE0-2 |                             PBE0-2 Double Hydrid Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.793701  |    ---     |  0.500000  |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               PBE0-D |                                  PBE0 Hybrid GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.250000  |    ---     |    ---     |    ---               |                  -D2 |                           Grimme's -D2 Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              PBE0-D3 |                                  PBE0 Hybrid GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.250000  |    ---     |    ---     |    ---               |              -D3ZERO |            Grimme's -D3 (zero-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            PBE0-D3BJ |                                  PBE0 Hybrid GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |  0.250000  |    ---     |    ---     |    ---               |                -D3BJ |              Grimme's -D3 (BJ-damping) Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             PBESOL_X |                                        PBEsol GGA Exchange Hole (Parameter Free) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                PBE_C |                                                                  PBE Correlation |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                PBE_X |                                           PBE GGA Exchange Hole (Parameter Free) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 PW91 |                                         PW91 GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               PW91_C |                                                                 PW91 Correlation |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               PW91_X |                                                  PW91 Parameterized GGA Exchange |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               RPBE_X |                                          RPBE GGA Exchange Hole (Parameter Free) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                SOGGA |                                 Second Order GGA Exchange-Correlation Functional |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              SOGGA_X |                                  Second Order GGA Exchange Hole (Parameter Free) |     Y      |    ---     |    ---     |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 dlDF |                                     Dispersionless Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.614413  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               dlDF+D |                                     Dispersionless Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.614413  |    ---     |    ---     |    ---               |             -DAS2010 |                 Podeszwa and Szalewicz Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             dlDF+D09 |                                     Dispersionless Hybrid Meta-GGA XC Functional |     Y      |     Y      |    ---     |  0.614413  |    ---     |    ---     |    ---               |             -DAS2009 |                 Podeszwa and Szalewicz Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               wB88_X |                                         B88 Short-Range GGA Exchange (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 wB97 |                                          Parameterized LRC B97 GGA XC Functional |     Y      |    ---     |  0.400000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                wB97X |                                   Parameterized Hybrid LRC B97 GGA XC Functional |     Y      |    ---     |  0.400000  |  0.157706  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |          wB97X-2(LP) |            Double Hybrid LRC B97 GGA XC Functional (Large Pople parametrization) |     Y      |    ---     |  0.300000  |  0.678792  |    ---     |  1.000000  |  0.581569 / 0.477992 |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |         wB97X-2(TQZ) |                    Double Hybrid LRC B97 GGA XC Functional (TQZ parametrization) |     Y      |    ---     |  0.300000  |  0.636158  |    ---     |  1.000000  |  0.529319 / 0.447105 |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              wB97X-D |                   Parameterized Hybrid LRC B97 GGA XC Functional with Dispersion |     Y      |    ---     |  0.200000  |  0.222036  |    ---     |    ---     |    ---               |                 -CHG |                   Chai and Head-Gordon Dispersion Correction |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                wBLYP |                                                BLYP SR-XC Functional (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                 wPBE |                                                 PBE SR-XC Functional (HJS Model) |     Y      |    ---     |  0.400000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |                wPBE0 |                                                PBE0 SR-XC Functional (HJS Model) |     Y      |    ---     |  0.300000  |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |               wPBE_X |                                         PBE Short-Range GGA Exchange (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |              wPBEsol |                                              PBEsol SR-XC Functional (HJS Model) |     Y      |    ---     |  0.400000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |             wPBEsol0 |                                             PBEsol0 SR-XC Functional (HJS Model) |     Y      |    ---     |  0.300000  |  0.250000  |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+
   |            wPBEsol_X |                                      PBEsol Short-Range GGA Exchange (HJS Model) |     Y      |    ---     |  0.300000  |    ---     |    ---     |    ---     |    ---               |              ---     |                                                      ---     |
   +----------------------+----------------------------------------------------------------------------------+------------+------------+------------+------------+------------+------------+----------------------+----------------------+--------------------------------------------------------------+

